fix and test endpoints